[package]
name = "youki-wasmedge-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = { workspace = true }
containerd-shim-wasm = { workspace = true }
libcontainer = { workspace = true }
tracing = { workspace = true }
oci-spec = { workspace = true }
log = { workspace = true }
wasmedge-sdk = "0.10.1"
