[package]
name = "youki-wasmtime-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-shim = { workspace = true }
containerd-shim-wasm = { workspace = true }
libcontainer = { workspace = true }
tracing = { workspace = true }
log = "~0.4"
wasmtime = {version = "10.0.1"}
wasmtime-wasi = {version = "10.0.1"}